[package]
name = "tsky"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.4"
bsky-sdk = "0.1.9"
chrono = "0.4.38"
crossterm = "0.28.1"
dotenvy = "0.15.7"
ipld-core = "0.4.1"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.22"
psl = "2.1.66"
ratatui = { version = "0.28.1", features = ["unstable-rendered-line-info"] }
regex = "1.11.1"
tokio = { version = "1.40.0", features = ["full"] }
tui-textarea = "0.6.1"
